<resources>
    <string name="app_name">WaterMark</string>
    <string name="feedback">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="need_photo_permission">We would use your storage to save photos</string>
    <string name="need_photo_to_edit">Please select photo to continue</string>
    <string name="please_allow_photo_permission">"You have declined access to photos, please active it in Settings>Privacy>Photos."</string>
    <string name="save_photo_is_Success">Success</string>
    <string name="get_external_directory_fail">Get external directory fail ,the reason is sdCard nonexistence or sdCard mount fail !"</string>
    <string name="download_tip_text">The App is stopped update, we \nrecommend to download our new App.</string>
    <string name="download_introduce">It is the Advantages for You while Install the \n“Followers Hub” - the home &amp; main App! Enjoy \nthe fast and safe followers &amp; likes boost!</string>
    <string name="photo_watermark">PHOTO\nWATERMARK</string>
    <string name="photo_watermark_n">PHOTO WATERMARK</string>
    <string name="photo">Photo</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="watermark">Watermark</string>
    <string name="color">Color</string>
    <string name="zero">0</string>
    <string name="one_hundred_percent">100%</string>

    <string name="v_facebook_app_id" translatable="false">xxxxxxxxxxxxxx</string>
    <string name="v_fb_login_protocol_scheme" translatable="false">fbxxxxxxxxxxxxxxx</string>
    <string name="ignore_icon">ignore icon</string>

    <string translatable="false" name="ad">AD</string>
    <string translatable="false" name="app_install">GET</string>
    <string name="exit">Exit</string>
    <string name="need_more_free_coins">Need More Free Coins?</string>
    <string name="yes">Yes</string>
    <string translatable="false" name="ignore_x">×</string>
    <string name="get_1000_free_coins">GET 1000 FREE COINS</string>
    <string name="order_success">ORDER SUCCESS</string>
    <string name="checkin_success">CHECKIN SUCCESS</string>
    <string name="please_try_again_later">Task loading, please try again later</string>

</resources>
