<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/edit_tool_bar"
        layout="@layout/tool_bar" />

    <ImageView
        android:id="@+id/single_water_mark"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="16dp"
        android:adjustViewBounds="true"
        android:src="@drawable/btn_single"
        app:layout_constraintEnd_toStartOf="@id/multiple_water_mark"
        app:layout_constraintTop_toTopOf="@id/multiple_water_mark" />

    <ImageView
        android:id="@+id/multiple_water_mark"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:adjustViewBounds="true"
        android:src="@drawable/btn_multiple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_tool_bar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_photo_group"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/multiple_water_mark">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/edit_photo_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/water_mark_iv_single"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:adjustViewBounds="true"
                app:layout_constraintBottom_toTopOf="@id/water_mark_tv_single"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                android:src="@drawable/watermark_1" />

            <TextView
                android:id="@+id/water_mark_tv_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/water_mark_iv_single"
                android:text="@string/watermark" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/multiple_water_mark_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/water_mark_group_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/water_mark_group_3"
                app:layout_constraintEnd_toStartOf="@id/water_mark_group_2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/water_mark_iv_1"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watermark_1" />

                <TextView
                    android:id="@+id/water_mark_tv_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watermark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/water_mark_group_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/water_mark_group_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/water_mark_group_1"
                app:layout_constraintTop_toTopOf="@id/water_mark_group_1">

                <ImageView
                    android:id="@+id/water_mark_iv_2"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watermark_1" />

                <TextView
                    android:id="@+id/water_mark_tv_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watermark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/water_mark_group_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@id/water_mark_group_5"
                app:layout_constraintEnd_toEndOf="@id/water_mark_group_1"
                app:layout_constraintStart_toStartOf="@id/water_mark_group_1"
                app:layout_constraintTop_toBottomOf="@id/water_mark_group_1">

                <ImageView
                    android:id="@+id/water_mark_iv_3"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watermark_1" />

                <TextView
                    android:id="@+id/water_mark_tv_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watermark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/water_mark_group_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/water_mark_group_3"
                app:layout_constraintEnd_toEndOf="@id/water_mark_group_2"
                app:layout_constraintStart_toStartOf="@id/water_mark_group_2"
                app:layout_constraintTop_toTopOf="@id/water_mark_group_3">

                <ImageView
                    android:id="@+id/water_mark_iv_4"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watermark_1" />

                <TextView
                    android:id="@+id/water_mark_tv_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watermark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/water_mark_group_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/water_mark_group_1"
                app:layout_constraintStart_toStartOf="@id/water_mark_group_1"
                app:layout_constraintTop_toBottomOf="@id/water_mark_group_3">

                <ImageView
                    android:id="@+id/water_mark_iv_5"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watermark_1" />

                <TextView
                    android:id="@+id/water_mark_tv_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watermark" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/water_mark_group_6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@id/water_mark_group_5"
                app:layout_constraintEnd_toEndOf="@id/water_mark_group_2"
                app:layout_constraintStart_toStartOf="@id/water_mark_group_2"
                app:layout_constraintTop_toTopOf="@id/water_mark_group_5">

                <ImageView
                    android:id="@+id/water_mark_iv_6"
                    android:layout_width="37dp"
                    android:layout_height="37dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/watermark_1" />

                <TextView
                    android:id="@+id/water_mark_tv_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="9dp"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:text="@string/watermark" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/text_and_color_regulator"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/edit_photo_group">

        <LinearLayout
            android:id="@+id/color_regulator"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@color/grey" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/color_seek_bar"
                android:layout_width="250dp"
                android:layout_height="16dp"
                android:background="@android:color/transparent"
                android:max="100"
                android:progress="50"
                android:progressDrawable="@drawable/seekbar_layer"
                android:splitTrack="false"
                android:thumb="@drawable/seek_bar_bt" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/one_hundred_percent"
                android:textColor="@color/grey" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/edit_input_group"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/input_box_bg"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:textCursorDrawable="@drawable/edit_cursor_color"
                android:id="@+id/edit_input"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="13dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/watermark"
                android:textColorHint="@color/grey"
                android:textColor="@color/grey" />

            <ImageView
                android:id="@+id/edit_cancel"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:adjustViewBounds="true"
                android:padding="13dp"
                android:src="@drawable/ic_delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/water_mark_select_bg"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_and_color_regulator">

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/edit_select_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toTopOf="parent"
            tools:itemCount="10"
            tools:listitem="@layout/item_water_mark" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RadioGroup
            android:id="@+id/selector_group"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="6dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/water_mark_selector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:button="@null"
                android:checked="true"
                android:drawableTop="@drawable/water_mark_icon_select"
                android:text="@string/watermark"
                android:textColor="@color/water_mark_select" />

            <RadioButton
                android:id="@+id/color_selector"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:button="@null"
                android:drawableTop="@drawable/color_icon_select"
                android:text="@string/color"
                android:textColor="@color/water_mark_select" />
        </RadioGroup>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>





